# htdfdocs

./: .gitignore  LICENSE  README.md
demos/cpp_demos/: .gitignore  CMakeLists.txt  README.md  htdf.cc  htdf.cpp  htdf.h  htdf_address_generate.cpp  htdf_transfer.cpp  key.cpp  main.cc  rand.cpp  rand.h  test.cc  test.h
demos/cpp_demos/htdf/: constant.h  htdf.cc  htdf.cpp  htdf.h  test.cc  test.cpp  utils.h
demos/cpp_demos/htdf/bech32/: bech32.h
demos/cpp_demos/htdf/crypto/: common.h  cpuid.h  hash.h  spanparsing.h  strencodings.cpp  strencodings.h  string.cpp
demos/cpp_demos/htdf/http/: httplib.cc  httplib.h
demos/golang_demos/: README.md  go.mod  go.sum
demos/golang_demos/address/: htdf_address_generate.go
demos/golang_demos/bech32/: bech32.go
demos/golang_demos/keystore/: keystore_convert.go
demos/golang_demos/transaction/: htdf_transfer.go
demos/java_demos/: README.md  pom.xml
demos/java_demos/src/main/java/com/orientwalt/demos/: Bech32Util.java  HtdfAddressGenerate.java  HtdfTransfer.java
demos/java_demos/src/test/java/com/orientwalt/demos/: HtdfAddressGenerateTest.java  (+1 more)
demos/nodejs_demos/: README.md  htdf_address_generate.js  htdf_transfer.js  package-lock.json  package.json
demos/python_demos/: README.md  htdf_address_generate.py  htdf_transfer.py
demos/python_demos/airdrop_tools/: README.md  address.txt  airdrop.py  hrc20_tokens.py  requirements.txt
demos/web3_htdf_demos/: README.md  demo.sol  hrc.js  hrc20.js  htdf.js
demos/web3_htdf_demos/sol/: README.md  demo_sol_AJCToken.abi
doc/: FAQ.md  HRC20.md  api.md  send_questions.md
mainnet/: README.md  update_config.md
mainnet/config/: config.toml
resources/: htdf_bip44.md  htdf_testnet_nodes.md
